crates/carta/tests/snapshots/golden_writer__ipynb__common__blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "> quoted\n",
    ">\n",
    "> more lines here"
   ],
   "id": "97b97479-76de-402b-85c0-5285d7d4ea6c"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
