crates/carta/tests/snapshots/golden_writer__ipynb__common__bullet-list-tight.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "- a\n",
    "- b\n",
    "- c"
   ],
   "id": "5dcab535-fe3f-4d4c-9e2b-d39b8c724f90"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
