crates/carta/tests/snapshots/golden_writer__ipynb__common__bullet-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "- outer\n",
    "\n",
    "  - inner one\n",
    "  - inner two"
   ],
   "id": "36699f88-337d-4e79-ae68-9f876267cc70"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
