crates/carta/tests/snapshots/golden_writer__ipynb__common__citation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "see \\[@knuth1984\\] for details"
   ],
   "id": "a6d6e0f2-f41f-4f65-affe-aa732dbe28bc"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
