crates/carta/tests/snapshots/golden_writer__ipynb__common__cluster-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "Clusters measure one glyph wide: 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 👨‍👩‍👧 and the\n",
    "wide glyphs 一二三 take two columns each, while ́abc opens a word with a\n",
    "mark."
   ],
   "id": "ea1c1248-ebf0-4a87-88f1-56521e8461ca"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
