crates/carta/tests/snapshots/golden_writer__ipynb__common__code-block-id.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "```\n",
    "plain code\n",
    "```"
   ],
   "id": "265d3947-d403-4308-98b3-a3dc2b358760"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
