crates/carta/tests/snapshots/golden_writer__ipynb__common__code-block-indented.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "    indented code\n",
    "    second line"
   ],
   "id": "a188c10f-a627-430b-ae23-68925cdbd89a"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
