crates/carta/tests/snapshots/golden_writer__ipynb__common__code-block-lang.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "``` rust\n",
    "let s = \"hi\";\n",
    "x < y && y > z\n",
    "```"
   ],
   "id": "167c6d51-36e7-4122-91c6-fb30d5ff6844"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
