crates/carta/tests/snapshots/golden_writer__ipynb__common__code-block-numbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "``` python\n",
    "print(1)\n",
    "print(2)\n",
    "```"
   ],
   "id": "b953b05d-ab80-43dc-bc15-6a3dde62ae38"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
