crates/carta/tests/snapshots/golden_writer__ipynb__common__code-block-trailing-newline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "    first line\n",
    "    second line"
   ],
   "id": "ce988a30-22e8-4cc1-873c-0945e2a204d0"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
