crates/carta/tests/snapshots/golden_writer__ipynb__common__code-span-space-padded.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "` x `\n",
    "\n",
    "` `\n",
    "\n",
    "`` `x ``"
   ],
   "id": "0b124bd9-a4f4-4add-96eb-de4d1c97a648"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
